PIM-8154 : Fix to be able to have the z-index upper for edge cases

--- a/src/Akeneo/Platform/Bundle/UIBundle/Resources/public/less/components/Subsection.less
+++ b/src/Akeneo/Platform/Bundle/UIBundle/Resources/public/less/components/Subsection.less
@@ -51,7 +51,6 @@
       position: sticky;
       bottom: 0;
       padding: 10px;
-      z-index: -1;
     }
   }
 
