--- a/src/Akeneo/Platform/Bundle/UIBundle/Resources/public/less/components/product-edit-form/FieldContainer.less
+++ b/src/Akeneo/Platform/Bundle/UIBundle/Resources/public/less/components/product-edit-form/FieldContainer.less
@@ -5,6 +5,10 @@
   position: relative;
   z-index: 0;
 
+  &--upper {
+    z-index: 3
+  }
+
   &--packed {
     margin-bottom: 5px;
 
